deploy/users/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: default
  labels:
    application: users-service
    version: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      application: users-service
  template:
    metadata:
      labels:
        application: users-service
        version: "1"
    spec:
      containers:
      - name: users-service
        image: gcr.io/siggi-example/hello-gcp-users:latest
        ports:
        - containerPort: 8080
          name: web
        - containerPort: 7979
          name: management
        resources:
          requests:
            memory: 512Mi
          limits:
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 5
          periodSeconds: 5
