deploy/users/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    application: users-service
spec:
  selector:
    application: users-service
  type: NodePort
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
